拆分 param
